Move InfoModalProvider to Layout component, to avoid grid gap jump

--- a/frontend/components/Layout.module.css
+++ b/frontend/components/Layout.module.css
@@ -1,4 +1,4 @@
 .main {
   display: grid;
-  gap: 3rem;
+  grid-gap: 3rem;
 }
